[gd_scene load_steps=19 format=2]

[ext_resource path="res://main.gd" type="Script" id=1]
[ext_resource path="res://recursos/principal/sfxOn.png" type="Texture" id=2]
[ext_resource path="res://recursos/principal/escalandoLogo.png" type="Texture" id=3]
[ext_resource path="res://montanas.tscn" type="PackedScene" id=4]
[ext_resource path="res://recursos/principal/musicOff.png" type="Texture" id=5]
[ext_resource path="res://recursos/principal/sfxOff.png" type="Texture" id=6]
[ext_resource path="res://recursos/principal/fondoPrin.png" type="Texture" id=7]
[ext_resource path="res://recursos/principal/musicOn.png" type="Texture" id=8]
[ext_resource path="res://recursos/principal/jugarBtn.png" type="Texture" id=9]
[ext_resource path="res://recursos/fuentes/Boogaloo-Regular.ttf" type="DynamicFontData" id=10]
[ext_resource path="res://recursos/principal/jugarBigBtn.png" type="Texture" id=11]
[ext_resource path="res://recursos/principal/listoBtn.png" type="Texture" id=12]
[ext_resource path="res://recursos/principal/cambiarNombreBigBtn.png" type="Texture" id=13]
[ext_resource path="res://recursos/principal/return.png" type="Texture" id=14]

[sub_resource type="DynamicFont" id=2]
size = 80
outline_color = Color( 0, 0.470588, 0.768627, 1 )
font_data = ExtResource( 10 )

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 1, 1, 1, 0.235294 )
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color( 0.1232, 0.43582, 0.77, 1 )
border_blend = true

[sub_resource type="DynamicFont" id=3]
size = 100
outline_size = 6
outline_color = Color( 0.905882, 0.545098, 0.0235294, 1 )
font_data = ExtResource( 10 )

[sub_resource type="DynamicFont" id=4]
size = 200
font_data = ExtResource( 10 )

[node name="Node2D" type="Node2D"]
script = ExtResource( 1 )
scene = ExtResource( 4 )

[node name="fondo" type="Sprite" parent="."]
texture = ExtResource( 7 )
centered = false

[node name="firstTime" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="superiorBtn" type="HBoxContainer" parent="firstTime"]
margin_top = 800.0
margin_right = 720.0
margin_bottom = 955.0
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="jugarBtn" type="TextureButton" parent="firstTime/superiorBtn"]
margin_left = 172.0
margin_right = 548.0
margin_bottom = 155.0
rect_pivot_offset = Vector2( 188, 77.5 )
texture_normal = ExtResource( 9 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="downBtns" type="HBoxContainer" parent="firstTime"]
margin_left = 30.0
margin_top = 1120.0
margin_right = 750.0
margin_bottom = 1250.0
custom_constants/separation = 30
__meta__ = {
"_edit_use_anchors_": false
}

[node name="music" type="TextureButton" parent="firstTime/downBtns"]
margin_right = 130.0
margin_bottom = 130.0
toggle_mode = true
texture_normal = ExtResource( 8 )
texture_pressed = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="sfx" type="TextureButton" parent="firstTime/downBtns"]
margin_left = 160.0
margin_right = 289.0
margin_bottom = 130.0
toggle_mode = true
texture_normal = ExtResource( 2 )
texture_pressed = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="logo" type="Sprite" parent="firstTime"]
position = Vector2( 360, 350 )
texture = ExtResource( 3 )

[node name="nextTime" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="supBtns" type="Control" parent="nextTime"]
margin_left = 627.0
margin_top = 670.0
margin_right = 627.0
margin_bottom = 825.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="superiorBtn" type="HBoxContainer" parent="nextTime/supBtns"]
margin_left = -627.0
margin_right = 93.0
margin_bottom = 155.0
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="jugarBtn" type="TextureButton" parent="nextTime/supBtns/superiorBtn"]
margin_left = 95.0
margin_right = 625.0
margin_bottom = 155.0
rect_pivot_offset = Vector2( 188, 77.5 )
texture_normal = ExtResource( 11 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="superiorBtn2" type="HBoxContainer" parent="nextTime/supBtns"]
margin_left = -627.0
margin_top = 200.0
margin_right = 93.0
margin_bottom = 356.0
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="cambiarNombreBtn" type="TextureButton" parent="nextTime/supBtns/superiorBtn2"]
margin_left = 95.0
margin_right = 625.0
margin_bottom = 156.0
rect_pivot_offset = Vector2( 188, 77.5 )
texture_normal = ExtResource( 13 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="downBtns" type="HBoxContainer" parent="nextTime"]
margin_left = 30.0
margin_top = 1120.0
margin_right = 750.0
margin_bottom = 1250.0
custom_constants/separation = 30
__meta__ = {
"_edit_use_anchors_": false
}

[node name="music" type="TextureButton" parent="nextTime/downBtns"]
margin_right = 130.0
margin_bottom = 130.0
toggle_mode = true
texture_normal = ExtResource( 8 )
texture_pressed = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="sfx" type="TextureButton" parent="nextTime/downBtns"]
margin_left = 160.0
margin_right = 289.0
margin_bottom = 130.0
toggle_mode = true
texture_normal = ExtResource( 2 )
texture_pressed = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="logo" type="Sprite" parent="nextTime"]
position = Vector2( 360, 350 )
texture = ExtResource( 3 )

[node name="nameSetting" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="textField" type="LineEdit" parent="nameSetting"]
margin_left = 60.0
margin_top = 347.0
margin_right = 660.0
margin_bottom = 453.0
custom_colors/cursor_color = Color( 0.0235294, 0.313726, 0.462745, 1 )
custom_colors/font_color = Color( 0.0235294, 0.313726, 0.462745, 1 )
custom_fonts/font = SubResource( 2 )
custom_styles/normal = SubResource( 1 )
caret_blink = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="superiorBtn" type="HBoxContainer" parent="nameSetting"]
margin_top = 500.0
margin_right = 720.0
margin_bottom = 656.0
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ListoBtn" type="TextureButton" parent="nameSetting/superiorBtn"]
margin_left = 172.0
margin_right = 547.0
margin_bottom = 156.0
rect_pivot_offset = Vector2( 188, 77.5 )
texture_normal = ExtResource( 12 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="nameSetting"]
margin_top = 210.0
margin_right = 720.0
margin_bottom = 330.0
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="nameSetting/HBoxContainer"]
margin_left = 49.0
margin_right = 671.0
margin_bottom = 120.0
custom_fonts/font = SubResource( 3 )
text = "Escribe tu nombre"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="return" type="TextureButton" parent="nameSetting"]
margin_left = 18.0
margin_top = 1170.0
margin_right = 106.0
margin_bottom = 1259.0
rect_pivot_offset = Vector2( 44, 44 )
texture_normal = ExtResource( 14 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="."]
visible = false
margin_left = 24.1287
margin_top = 521.017
margin_right = 708.129
margin_bottom = 760.017
custom_fonts/font = SubResource( 4 )
text = "Reseteado"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="button_down" from="firstTime/superiorBtn/jugarBtn" to="." method="_on_jugarBtn_button_down"]
[connection signal="button_up" from="firstTime/superiorBtn/jugarBtn" to="." method="_on_jugarBtn_button_up"]
[connection signal="toggled" from="firstTime/downBtns/music" to="." method="_on_music_toggled"]
[connection signal="toggled" from="firstTime/downBtns/sfx" to="." method="_on_sfx_toggled"]
[connection signal="button_down" from="nextTime/supBtns/superiorBtn/jugarBtn" to="." method="_on_jugarBtn_button_down"]
[connection signal="button_up" from="nextTime/supBtns/superiorBtn/jugarBtn" to="." method="_on_jugarBtn_button_up"]
[connection signal="button_down" from="nextTime/supBtns/superiorBtn2/cambiarNombreBtn" to="." method="_on_cambiarNombreBtn_button_down"]
[connection signal="button_up" from="nextTime/supBtns/superiorBtn2/cambiarNombreBtn" to="." method="_on_cambiarNombreBtn_button_up"]
[connection signal="toggled" from="nextTime/downBtns/music" to="." method="_on_music_toggled"]
[connection signal="toggled" from="nextTime/downBtns/sfx" to="." method="_on_sfx_toggled"]
[connection signal="button_down" from="nameSetting/superiorBtn/ListoBtn" to="." method="_on_ListoBtn_button_down"]
[connection signal="button_up" from="nameSetting/superiorBtn/ListoBtn" to="." method="_on_ListoBtn_button_up"]
[connection signal="button_down" from="nameSetting/return" to="." method="_on_return_button_down"]
[connection signal="button_up" from="nameSetting/return" to="." method="_on_return_button_up"]
